refactor link tests (wip)